<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="min_edit_gain">-12</string>
    <string name="max_edit_gain">36</string>
    <string name="powerOn">Power On</string>
    <string name="powerOff">Power Off</string>
    <string name="dolbyDigitalPlus">Dolby Digital Plus</string>
    <string name="intelligent_equalizer">Intelligent EQ:</string>
    <string name="surround_virtualizer">Surround Virtualizer</string>
    <string name="dialogue_enhancer">Dialogue Enhancer</string>
    <string name="volume_leveler">Volume Leveler</string>
    <string name="copyright">Dolby and the double-D symbol are registered trademarks of Dolby Laboratories. ©2012 Dolby Laboratories. All rights reserved. Based on Dolby Digital Plus. A.R.I.S.E Contributors guitardedhero, ahrion, Ben Feutrill, sonophilos, smeejaytee, nericollin, Paschfire, wrongway213, Roi007leaf, aki_007, Exclusive-R, R3V3NT3CH, ephexxis, churapa, Jacobh25, dingermtb, flieswithhawks, Joe0Bloggs, phamous, mrrocketdog, Yoinx, docnok63, williwood. In good faith, this work contains fair use of copyrighted and non-copyrighted material from Dolby Difital Plus for non-commercial and nonprofit educational purposes. This work is distributed free of charge. The author has neither monetized this work nor sought any profit from its distribution. Copyright Disclaimer under section 107 of the Copyright Act 1976, allowance is made for fair use for purposes such as criticism, comment, news reporting, teaching, scholarship, education and research. Quotations are attributed to the original authors and sources.</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="game">Game</string>
    <string name="voice">Voice</string>
    <string name="preset_1">Custom 1</string>
    <string name="preset_2">Custom 2</string>
    <string name="bright">Bright</string>
    <string name="open">Open</string>
    <string name="rich">Rich</string>
    <string name="focused">Focused</string>
    <string name="off">Off</string>
    <string name="custom">Manual</string>
    <string name="db36">36dB</string>
    <string name="db24">24dB</string>
    <string name="db12">12dB</string>
    <string name="db0">0dB</string>
    <string name="dbn12">-12dB</string>
    <string name="graphical_equalizer">Graphic EQ:</string>
    <string name="app_name">DDPlus</string>
    <string name="colon">:</string>
    <string name="minimize_content_description">Minimize button</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="instore_app_name">DsInStoreDemoApp</string>
    <string name="instore_menu_text">Play Demo</string>
    <string name="replay">Replay</string>
    <string name="default_text" />
    <string name="stop">Stop</string>
    <string name="exit">Exit</string>
    <string name="tooltip_eq_title">Intelligent Equalizer/Graphic Equalizer</string>
    <string name="tooltip_eq_text">The Intelligent Equalizer analyzes and dynamically adjusts the audio to match a desired tone. Choose from the four presets shown, and then touch the Spectral Visualizer to make custom modifications to the Graphic Equalizer.</string>
    <string name="tooltip_sv_title">Surround Virtualizer</string>
    <string name="tooltip_sv_text">The Surround Virtualizer creates realistic surround sound from any set of headphones or stereo speakers. Set the switch on or off to control the surround sound effect.</string>
    <string name="tooltip_de_title">Dialogue Enhancer</string>
    <string name="tooltip_de_text">The Dialogue Enhancer improves the clarity of speech in any type of media. Set the switch on or off to control dialogue enhancement.</string>
    <string name="tooltip_vl_title">Volume Leveler</string>
    <string name="tooltip_vl_text">The Volume Leveler provides a consistent volume across all content and applications based on the master volume level of the device. Set the switch on or off to control automatic volume leveling.</string>
</resources>
